Worked on header and finished it and also working with hero section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Designo</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- style.css -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
   </head>
   <body>
-    
+    <!-- Header -->
+    <header class="header">
+      <div class="header__container container">
+        <img
+          src="./images/headerLogo.png"
+          alt="image of designo logo"
+          class="header__logo"
+          width="196"
+        />
+        <ul class="header__list">
+          <li class="header__item">
+            <a href="#" class="header__link">OUR COMPANY</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">LOCATIONS</a>
+          </li>
+          <li class="header__item">
+            <a href="#" class="header__link">CONTACT</a>
+          </li>
+        </ul>
+        <i class="header__icon fa-solid fa-bars"></i>
+      </div>
+    </header>
+    <!-- The end of the header -->
+    <!-- Main -->
+    <main class="main">
+      <!-- Hero section -->
+      <section class="hero">
+        <div class="hero__container container">
+          <div class="hero__background">
+            <div class="hero__content">
+              <h1 class="hero__title">
+                Award-winning custom designs and digital branding solutions
+              </h1>
+              <p class="hero__text">
+                With over 10 years in the industry, we are experienced in
+                creating fully responsive websites, app design, and engaging
+                brand experiences. Find out more about our services.
+              </p>
+              <button class="hero__btn btn">LEARN MORE</button>
+            </div>
+            <img
+              src="./images/hero__phoneIMg.png"
+              alt="image of phone"
+              width="280"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
