Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -54,12 +54,29 @@
               </p>
               <button class="hero__btn btn">LEARN MORE</button>
             </div>
-            <img
-              src="./images/hero__phoneIMg.png"
-              alt="image of phone"
-              width="280"
-            />
+            <img src="./images/hero__phoneIMg.png" alt="image of phone" />
           </div>
+        </div>
+      </section>
+      <!-- Projects section -->
+
+      <section class="projects">
+        <div class="projects__container container">
+          <!-- web design -->
+          <a class="projects__link" href="#">
+            <h2 class="projects__title">WEB DESIGN</h2>
+            <p class="projects__text">VIEW PROJECTS <span>></span></p>
+          </a>
+          <!-- App design -->
+          <a class="projects__link" href="#">
+            <h2 class="projects__title">APP DESIGN</h2>
+            <p class="projects__text">VIEW PROJECTS <span>></span></p>
+          </a>
+          <!-- Graphic design-->
+          <a class="projects__link" href="#">
+            <h2 class="projects__title">GRAPHIC DESIGN</h2>
+            <p class="projects__text">VIEW PROJECTS <span>></span></p>
+          </a>
         </div>
       </section>
     </main>
