Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           </div>
         </div>
       </section>
-      <!-- Projects section -->
 
+      <!-- Projects section -->
       <section class="projects">
         <div class="projects__container container">
           <!-- web design -->
@@ -77,6 +77,60 @@
             <h2 class="projects__title">GRAPHIC DESIGN</h2>
             <p class="projects__text">VIEW PROJECTS <span>></span></p>
           </a>
+        </div>
+      </section>
+
+      <!-- workInfo -->
+      <section class="workInfo">
+        <div class="workInfo__container container">
+          <div class="workInfo__boxes">
+            <img
+              src="./images/passionate.png"
+              alt="image of man with laptop"
+              class="workInfo__boxes__img"
+            />
+            <div class="boxes__content">
+              <h3 class="workInfo__boxes__title">PASSIONATE</h3>
+              <p class="workInfo__boxes__text">
+                Each project starts with an in-depth brand research to ensure we
+                only create products that serve a purpose. We merge art, design,
+                and technology into exciting new solutions.
+              </p>
+            </div>
+          </div>
+
+          <div class="workInfo__boxes">
+            <img
+              src="./images/recourseful.png"
+              alt="image of man with laptop"
+              class="workInfo__boxes__img"
+            />
+            <div class="boxes__content">
+              <h3 class="workInfo__boxes__title">RESOURCEFUL</h3>
+              <p class="workInfo__boxes__text">
+                Everything that we do has a strategic purpose. We use an agile
+                approach in all of our projects and value customer
+                collaboration. It guarantees superior results that fulfill our
+                clients’ needs.
+              </p>
+            </div>
+          </div>
+
+          <div class="workInfo__boxes">
+            <img
+              src="./images/friendly.png"
+              alt="image of man with laptop"
+              class="workInfo__boxes__img"
+            />
+            <div class="boxes__content">
+              <h3 class="workInfo__boxes__title">FRIENDLY</h3>
+              <p class="workInfo__boxes__text">
+                We are a group of enthusiastic folks who know how to put people
+                first. Our success depends on our customers, and we strive to
+                give them the best experience a company can provide.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
