Add pre-footer and footer sections with responsive styles and social media icons

--- a/index.html
+++ b/index.html
@@ -133,6 +133,73 @@
           </div>
         </div>
       </section>
+      <!-- Pre-Footer -->
+      <div class="pre__footer container">
+        <div class="pre__footer__container">
+          <div class="pre__footer__content">
+            <h2 class="pre__footer__title">Let's talk about your project</h2>
+            <p class="pre__footer__text">
+              Ready to take it to the next level? Contact us today and find out
+              how our expertise can help your business grow.
+            </p>
+          </div>
+          <button class="btn pre__footer__btn">Get in touch</button>
+        </div>
+      </div>
     </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <!-- Footer -->
+      <section class="footerBlackPage">
+        <div class="footer__container container">
+          <!-- footer head -->
+          <div class="footer__head">
+            <img
+              src="./images/footerLogo.png"
+              alt="image of footer logo"
+              class="footer__head__img"
+            />
+            <ul class="footer__head__list">
+              <li class="footer__head__item">
+                <a class="footer__head__link" href="#">OUR COMPANY</a>
+              </li>
+              <li class="footer__head__item">
+                <a class="footer__head__link" href="#">LOCATIONS</a>
+              </li>
+              <li class="footer__head__item">
+                <a class="footer__head__link" href="#">CONTACT</a>
+              </li>
+            </ul>
+          </div>
+
+          <hr class="footer__hr" />
+          <!-- footer banner -->
+          <div class="footer__banner">
+            <ul class="footer__banner__list">
+              <li class="footer__banner__item bold">Designo Central Office</li>
+              <li class="footer__banner__item">3886 Wellington Street</li>
+              <li class="footer__banner__item">Toronto, Ontario M9C 3J5</li>
+            </ul>
+            <ul class="footer__banner__list">
+              <li class="footer__banner__item bold">
+                Contact Us (Central Office)
+              </li>
+              <li class="footer__banner__item bold">P : +1 253-863-8967</li>
+              <li class="footer__banner__item bold">M : contact@designo.co</li>
+            </ul>
+            <ul class="footer__social__list">
+              <li class="footer__social__item">
+                <img src="./images/facebook.svg" alt="icon of facebook" />
+              </li>
+              <li class="footer__social__item"></li>
+              <li class="footer__social__item"></li>
+              <li class="footer__social__item"></li>
+              <li class="footer__social__item"></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
