Enhance footer layout with new styles and social media icons

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
               alt="image of footer logo"
               class="footer__head__img"
             />
+            <hr class="footer__hidden__hr" />
             <ul class="footer__head__list">
               <li class="footer__head__item">
                 <a class="footer__head__link" href="#">OUR COMPANY</a>
@@ -176,26 +177,40 @@
           <hr class="footer__hr" />
           <!-- footer banner -->
           <div class="footer__banner">
-            <ul class="footer__banner__list">
-              <li class="footer__banner__item bold">Designo Central Office</li>
-              <li class="footer__banner__item">3886 Wellington Street</li>
-              <li class="footer__banner__item">Toronto, Ontario M9C 3J5</li>
-            </ul>
-            <ul class="footer__banner__list">
-              <li class="footer__banner__item bold">
-                Contact Us (Central Office)
-              </li>
-              <li class="footer__banner__item bold">P : +1 253-863-8967</li>
-              <li class="footer__banner__item bold">M : contact@designo.co</li>
-            </ul>
+            <div class="footer__banner__listBox">
+              <ul class="footer__banner__list">
+                <li class="footer__banner__item bold">
+                  Designo Central Office
+                </li>
+                <li class="footer__banner__item">3886 Wellington Street</li>
+                <li class="footer__banner__item">Toronto, Ontario M9C 3J5</li>
+              </ul>
+              <ul class="footer__banner__list">
+                <li class="footer__banner__item bold">
+                  Contact Us (Central Office)
+                </li>
+                <li class="footer__banner__item bold">P : +1 253-863-8967</li>
+                <li class="footer__banner__item bold">
+                  M : contact@designo.co
+                </li>
+              </ul>
+            </div>
             <ul class="footer__social__list">
               <li class="footer__social__item">
                 <img src="./images/facebook.svg" alt="icon of facebook" />
               </li>
-              <li class="footer__social__item"></li>
-              <li class="footer__social__item"></li>
-              <li class="footer__social__item"></li>
-              <li class="footer__social__item"></li>
+              <li class="footer__social__item">
+                <img src="./images/youtube.svg" alt="icon of youtube" />
+              </li>
+              <li class="footer__social__item">
+                <img src="./images/twitter.svg" alt="icon of twitter" />
+              </li>
+              <li class="footer__social__item">
+                <img src="./images/pinterest.svg" alt="icon of pinterest" />
+              </li>
+              <li class="footer__social__item">
+                <img src="./images/instagram.svg" alt="icon of instagram" />
+              </li>
             </ul>
           </div>
         </div>
