--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <section class="projects">
         <div class="projects__container container">
           <!-- web design -->
-          <a class="projects__link" href="#">
+          <a class="projects__link" href="./extraPages/webDesign.html">
             <h2 class="projects__title">WEB DESIGN</h2>
             <p class="projects__text">VIEW PROJECTS <span>></span></p>
           </a>
