Add project view and pre-footer sections with responsive styles

--- a/index.html
+++ b/index.html
@@ -63,12 +63,16 @@
       <section class="projects">
         <div class="projects__container container">
           <!-- web design -->
-          <a class="projects__link" href="./extraPages/webDesign.html">
+          <a
+            class="projects__link"
+            href="./extraPages/webDesign.html"
+            target="_blank"
+          >
             <h2 class="projects__title">WEB DESIGN</h2>
             <p class="projects__text">VIEW PROJECTS <span>></span></p>
           </a>
           <!-- App design -->
-          <a class="projects__link" href="#">
+          <a class="projects__link" href="#" target="_blank">
             <h2 class="projects__title">APP DESIGN</h2>
             <p class="projects__text">VIEW PROJECTS <span>></span></p>
           </a>
@@ -134,7 +138,7 @@
         </div>
       </section>
       <!-- Pre-Footer -->
-      <div class="pre__footer container">
+      <section class="pre__footer container">
         <div class="pre__footer__container">
           <div class="pre__footer__content">
             <h2 class="pre__footer__title">Let's talk about your project</h2>
@@ -145,7 +149,7 @@
           </div>
           <button class="btn pre__footer__btn">Get in touch</button>
         </div>
-      </div>
+      </section>
     </main>
 
     <!-- Footer -->
