--- a/extraPages/webDesign.html
+++ b/extraPages/webDesign.html
@@ -26,7 +26,9 @@
         />
         <ul class="header__list">
           <li class="header__item">
-            <a href="#" class="header__link">OUR COMPANY</a>
+            <a href="../index.html" class="header__link" target="_blank"
+              >OUR COMPANY</a
+            >
           </li>
           <li class="header__item">
             <a href="#" class="header__link">LOCATIONS</a>
