--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
             <p class="projects__text">VIEW PROJECTS <span>></span></p>
           </a>
           <!-- App design -->
-          <a class="projects__link" href="#" target="_blank">
+          <a
+            class="projects__link"
+            href="./extraPages/appDesign.html"
+            target="_blank"
+          >
             <h2 class="projects__title">APP DESIGN</h2>
             <p class="projects__text">VIEW PROJECTS <span>></span></p>
           </a>
