--- a/extraPages/appDesign.html
+++ b/extraPages/appDesign.html
@@ -49,19 +49,20 @@
     </section>
 
     <!-- Collection -->
-    <section class="webd__container container">
+    <section class="appd__container container">
       <div class="appd__collection collection">
         <!-- first -->
         <a href="#" class="collection__item">
           <img
-            src="../images/express.jpg"
+            src="../images/airfilter.jpg"
             alt="image of express"
             class="collection__img"
           />
           <div class="collection__content">
-            <h3 class="collection__title">EXPRESS</h3>
+            <h3 class="collection__title">AIRFILTER</h3>
             <p class="collection__text">
-              A multi-carrier shipping website for ecommerce businesses
+              Solving the problem of poor indoor air quality by filtering the
+              air
             </p>
           </div>
         </a>
@@ -69,29 +70,29 @@
         <!-- second -->
         <a href="#" class="collection__item">
           <img
-            src="../images/transfer.jpg"
+            src="../images/eyecam.jpg"
             alt="image of transfer"
             class="collection__img"
           />
           <div class="collection__content">
-            <h3 class="collection__title">TRANSFER</h3>
+            <h3 class="collection__title">EYECAM</h3>
             <p class="collection__text">
-              Site for low-cost money transfers and sending money within seconds
+              Product that lets you edit your favorite photos and videos at any
+              time
             </p>
           </div>
         </a>
         <!-- third -->
         <a href="#" class="collection__item">
           <img
-            src="../images/photon.jpg"
+            src="../images/faceit.jpg"
             alt="image of photon"
             class="collection__img"
           />
           <div class="collection__content">
-            <h3 class="collection__title">PHOTON</h3>
+            <h3 class="collection__title">FACEIT</h3>
             <p class="collection__text">
-              A state-of-the-art music player with high-resolution audio and DSP
-              effects
+              Get to meet your favorite internet superstar with the faceit app
             </p>
           </div>
         </a>
@@ -99,14 +100,14 @@
         <!-- fourth -->
         <a href="#" class="collection__item">
           <img
-            src="../images/builder.jpg"
+            src="../images/todo.jpg"
             alt="image of builder"
             class="collection__img"
           />
           <div class="collection__content">
-            <h3 class="collection__title">BUILDER</h3>
+            <h3 class="collection__title">TODO</h3>
             <p class="collection__text">
-              Connects users with local contractors based on their location
+              A todo app that features cloud sync with light and dark mode
             </p>
           </div>
         </a>
@@ -114,29 +115,14 @@
         <!-- fivth -->
         <a href="#" class="collection__item">
           <img
-            src="../images/blogr.jpg"
+            src="../images/loopstudios.jpg"
             alt="image of blogr"
             class="collection__img"
           />
           <div class="collection__content">
-            <h3 class="collection__title">BLOGR</h3>
+            <h3 class="collection__title">LOOPSTUDIOS</h3>
             <p class="collection__text">
-              Blogr is a platform for creating an online blog or publication
-            </p>
-          </div>
-        </a>
-
-        <!-- sixth -->
-        <a href="#" class="collection__item">
-          <img
-            src="../images/camp.jpg"
-            alt="image of camp"
-            class="collection__img"
-          />
-          <div class="collection__content">
-            <h3 class="collection__title">CAMP</h3>
-            <p class="collection__text">
-              Get expert training in coding, data, design, and digital marketing
+              A VR experience app made for Loopstudios
             </p>
           </div>
         </a>
