--- a/extraPages/webDesign.html
+++ b/extraPages/webDesign.html
@@ -153,7 +153,7 @@
 
       <!-- Project view -->
       <section class="project__view__container container">
-        <a href="./appDesign.html" class="project__view__item">
+        <a href="./appDesign.html" class="project__view__item" target="_blank">
           <h3 class="project__view__title">APP DESIGN</h3>
           <p class="project__view__text">VIEW PROJECTS <span>></span></p>
         </a>
