Refactor code structure for improved readability and maintainability

--- a/extraPages/appDesign.html
+++ b/extraPages/appDesign.html
@@ -37,96 +37,202 @@
     </header>
     <!-- The end of the header -->
 
-    <!-- App Design Hero -->
-    <section class="appDesign__hero container">
-      <div class="appDesign__hero__container">
-        <h3 class="appDesign__hero__title">App Design</h3>
-        <p class="appDesign__hero__text">
-          Our mobile designs bring intuitive digital solutions to your customers
-          right at their fingertips.
-        </p>
-      </div>
-    </section>
+    <main class="main">
+      <!-- App Design Hero -->
+      <section class="appDesign__hero container">
+        <div class="appDesign__hero__container">
+          <h3 class="appDesign__hero__title">App Design</h3>
+          <p class="appDesign__hero__text">
+            Our mobile designs bring intuitive digital solutions to your
+            customers right at their fingertips.
+          </p>
+        </div>
+      </section>
 
-    <!-- Collection -->
-    <section class="appd__container container">
-      <div class="appd__collection collection">
-        <!-- first -->
-        <a href="#" class="collection__item">
-          <img
-            src="../images/airfilter.jpg"
-            alt="image of express"
-            class="collection__img"
-          />
-          <div class="collection__content">
-            <h3 class="collection__title">AIRFILTER</h3>
-            <p class="collection__text">
-              Solving the problem of poor indoor air quality by filtering the
-              air
-            </p>
-          </div>
+      <!-- Collection -->
+      <section class="appd__container container">
+        <div class="appd__collection collection">
+          <!-- first -->
+          <a href="#" class="collection__item">
+            <img
+              src="../images/airfilter.jpg"
+              alt="image of express"
+              class="collection__img"
+            />
+            <div class="collection__content">
+              <h3 class="collection__title">AIRFILTER</h3>
+              <p class="collection__text">
+                Solving the problem of poor indoor air quality by filtering the
+                air
+              </p>
+            </div>
+          </a>
+
+          <!-- second -->
+          <a href="#" class="collection__item">
+            <img
+              src="../images/eyecam.jpg"
+              alt="image of transfer"
+              class="collection__img"
+            />
+            <div class="collection__content">
+              <h3 class="collection__title">EYECAM</h3>
+              <p class="collection__text">
+                Product that lets you edit your favorite photos and videos at
+                any time
+              </p>
+            </div>
+          </a>
+          <!-- third -->
+          <a href="#" class="collection__item">
+            <img
+              src="../images/faceit.jpg"
+              alt="image of photon"
+              class="collection__img"
+            />
+            <div class="collection__content">
+              <h3 class="collection__title">FACEIT</h3>
+              <p class="collection__text">
+                Get to meet your favorite internet superstar with the faceit app
+              </p>
+            </div>
+          </a>
+
+          <!-- fourth -->
+          <a href="#" class="collection__item">
+            <img
+              src="../images/todo.jpg"
+              alt="image of builder"
+              class="collection__img"
+            />
+            <div class="collection__content">
+              <h3 class="collection__title">TODO</h3>
+              <p class="collection__text">
+                A todo app that features cloud sync with light and dark mode
+              </p>
+            </div>
+          </a>
+
+          <!-- fivth -->
+          <a href="#" class="collection__item">
+            <img
+              src="../images/loopstudios.jpg"
+              alt="image of blogr"
+              class="collection__img"
+            />
+            <div class="collection__content">
+              <h3 class="collection__title">LOOPSTUDIOS</h3>
+              <p class="collection__text">
+                A VR experience app made for Loopstudios
+              </p>
+            </div>
+          </a>
+        </div>
+      </section>
+
+      <!-- Project view -->
+      <section class="project__view__container container">
+        <a
+          href="./webDesign.html"
+          class="project__view__item appd__view"
+          target="_blank"
+        >
+          <h3 class="project__view__title">WEB DESIGN</h3>
+          <p class="project__view__text">VIEW PROJECTS <span>></span></p>
         </a>
 
-        <!-- second -->
-        <a href="#" class="collection__item">
-          <img
-            src="../images/eyecam.jpg"
-            alt="image of transfer"
-            class="collection__img"
-          />
-          <div class="collection__content">
-            <h3 class="collection__title">EYECAM</h3>
-            <p class="collection__text">
-              Product that lets you edit your favorite photos and videos at any
-              time
-            </p>
-          </div>
-        </a>
-        <!-- third -->
-        <a href="#" class="collection__item">
-          <img
-            src="../images/faceit.jpg"
-            alt="image of photon"
-            class="collection__img"
-          />
-          <div class="collection__content">
-            <h3 class="collection__title">FACEIT</h3>
-            <p class="collection__text">
-              Get to meet your favorite internet superstar with the faceit app
-            </p>
-          </div>
-        </a>
+        <!--  -->
 
-        <!-- fourth -->
-        <a href="#" class="collection__item">
-          <img
-            src="../images/todo.jpg"
-            alt="image of builder"
-            class="collection__img"
-          />
-          <div class="collection__content">
-            <h3 class="collection__title">TODO</h3>
-            <p class="collection__text">
-              A todo app that features cloud sync with light and dark mode
-            </p>
-          </div>
+        <a href="./graphicDesign.html" class="project__view__item">
+          <h3 class="project__view__title">GRAPHIC DESIGN</h3>
+          <p class="project__view__text">VIEW PROJECTS <span>></span></p>
         </a>
+      </section>
 
-        <!-- fivth -->
-        <a href="#" class="collection__item">
-          <img
-            src="../images/loopstudios.jpg"
-            alt="image of blogr"
-            class="collection__img"
-          />
-          <div class="collection__content">
-            <h3 class="collection__title">LOOPSTUDIOS</h3>
-            <p class="collection__text">
-              A VR experience app made for Loopstudios
+      <!-- Pre-Footer -->
+      <section class="pre__footer container">
+        <div class="pre__footer__container">
+          <div class="pre__footer__content">
+            <h2 class="pre__footer__title">Let's talk about your project</h2>
+            <p class="pre__footer__text">
+              Ready to take it to the next level? Contact us today and find out
+              how our expertise can help your business grow.
             </p>
           </div>
-        </a>
-      </div>
-    </section>
+          <button class="btn pre__footer__btn">Get in touch</button>
+        </div>
+      </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <!-- Footer black page -->
+      <section class="footerBlackPage">
+        <div class="footer__container container">
+          <!-- footer head -->
+          <div class="footer__head">
+            <img
+              src="../images/footerLogo.png"
+              alt="image of footer logo"
+              class="footer__head__img"
+            />
+            <hr class="footer__hidden__hr" />
+            <ul class="footer__head__list">
+              <li class="footer__head__item">
+                <a class="footer__head__link" href="../index.html"
+                  >OUR COMPANY</a
+                >
+              </li>
+              <li class="footer__head__item">
+                <a class="footer__head__link" href="#">LOCATIONS</a>
+              </li>
+              <li class="footer__head__item">
+                <a class="footer__head__link" href="#">CONTACT</a>
+              </li>
+            </ul>
+          </div>
+
+          <hr class="footer__hr" />
+          <!-- footer banner -->
+          <div class="footer__banner">
+            <div class="footer__banner__listBox">
+              <ul class="footer__banner__list">
+                <li class="footer__banner__item bold">
+                  Designo Central Office
+                </li>
+                <li class="footer__banner__item">3886 Wellington Street</li>
+                <li class="footer__banner__item">Toronto, Ontario M9C 3J5</li>
+              </ul>
+              <ul class="footer__banner__list">
+                <li class="footer__banner__item bold">
+                  Contact Us (Central Office)
+                </li>
+                <li class="footer__banner__item bold">P : +1 253-863-8967</li>
+                <li class="footer__banner__item bold">
+                  M : contact@designo.co
+                </li>
+              </ul>
+            </div>
+            <ul class="footer__social__list">
+              <li class="footer__social__item">
+                <img src="../images/facebook.svg" alt="icon of facebook" />
+              </li>
+              <li class="footer__social__item">
+                <img src="../images/youtube.svg" alt="icon of youtube" />
+              </li>
+              <li class="footer__social__item">
+                <img src="../images/twitter.svg" alt="icon of twitter" />
+              </li>
+              <li class="footer__social__item">
+                <img src="../images/pinterest.svg" alt="icon of pinterest" />
+              </li>
+              <li class="footer__social__item">
+                <img src="../images/instagram.svg" alt="icon of instagram" />
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
