--- a/extraPages/graphicDesign.html
+++ b/extraPages/graphicDesign.html
@@ -3,16 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Design</title>
-    <!-- Web Design styles -->
-    <link rel="stylesheet" href="../css/webDesign.css" />
-    <!-- Styles of layouts -->
+    <title>Graphic Design</title>
+    <!-- graphicDesign styles -->
+    <link rel="stylesheet" href="../css/graphicDesign.css" />
+    <!-- Global styles -->
     <link rel="stylesheet" href="../css/style.css" />
-    <!-- Font awesome icon -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-    />
   </head>
   <body>
     <!-- Header -->
@@ -41,33 +36,34 @@
       </div>
     </header>
     <!-- The end of the header -->
+
     <!-- Main -->
-    <main class="webDesign__main">
+    <main class="main">
       <!-- Hero -->
-      <section class="webDesign__hero container">
-        <div class="webDesign__hero__container">
-          <h3 class="webDesign__title">Web Design</h3>
-          <p class="webDesign__text">
-            We build websites that serve as powerful marketing tools and bring
-            memorable brand experiences.
+      <section class="graphicDesign__hero container">
+        <div class="graphicDesign__hero__container">
+          <h3 class="graphicDesign__title">Graphic Design</h3>
+          <p class="graphicDesign__text">
+            We deliver eye-catching branding materials that are tailored to meet
+            your business objectives.
           </p>
         </div>
       </section>
 
       <!-- Collection -->
-      <section class="webd__container container">
-        <div class="webd__collection collection">
+      <section class="graphicD__container container">
+        <div class="graphicD__collection collection">
           <!-- first -->
           <a href="#" class="collection__item">
             <img
-              src="../images/express.jpg"
+              src="../images/timBrown.png"
               alt="image of express"
               class="collection__img"
             />
             <div class="collection__content">
-              <h3 class="collection__title">EXPRESS</h3>
+              <h3 class="collection__title">TIM BROWN</h3>
               <p class="collection__text">
-                A multi-carrier shipping website for ecommerce businesses
+                A book cover designed for Tim Brown's new release, 'Change'r
               </p>
             </div>
           </a>
@@ -75,76 +71,28 @@
           <!-- second -->
           <a href="#" class="collection__item">
             <img
-              src="../images/transfer.jpg"
+              src="../images/boxedWater.png"
               alt="image of transfer"
               class="collection__img"
             />
             <div class="collection__content">
-              <h3 class="collection__title">TRANSFER</h3>
+              <h3 class="collection__title">BOXED WATER</h3>
               <p class="collection__text">
-                Site for low-cost money transfers and sending money within
-                seconds
+                A simple packaging concept made for Boxed Water
               </p>
             </div>
           </a>
           <!-- third -->
           <a href="#" class="collection__item">
             <img
-              src="../images/photon.jpg"
+              src="../images/science.png"
               alt="image of photon"
               class="collection__img"
             />
             <div class="collection__content">
-              <h3 class="collection__title">PHOTON</h3>
+              <h3 class="collection__title">SCIENCE!</h3>
               <p class="collection__text">
-                A state-of-the-art music player with high-resolution audio and
-                DSP effects
-              </p>
-            </div>
-          </a>
-
-          <!-- fourth -->
-          <a href="#" class="collection__item">
-            <img
-              src="../images/builder.jpg"
-              alt="image of builder"
-              class="collection__img"
-            />
-            <div class="collection__content">
-              <h3 class="collection__title">BUILDER</h3>
-              <p class="collection__text">
-                Connects users with local contractors based on their location
-              </p>
-            </div>
-          </a>
-
-          <!-- fivth -->
-          <a href="#" class="collection__item">
-            <img
-              src="../images/blogr.jpg"
-              alt="image of blogr"
-              class="collection__img"
-            />
-            <div class="collection__content">
-              <h3 class="collection__title">BLOGR</h3>
-              <p class="collection__text">
-                Blogr is a platform for creating an online blog or publication
-              </p>
-            </div>
-          </a>
-
-          <!-- sixth -->
-          <a href="#" class="collection__item">
-            <img
-              src="../images/camp.jpg"
-              alt="image of camp"
-              class="collection__img"
-            />
-            <div class="collection__content">
-              <h3 class="collection__title">CAMP</h3>
-              <p class="collection__text">
-                Get expert training in coding, data, design, and digital
-                marketing
+                A poster made in collaboration with the Federal Art Project
               </p>
             </div>
           </a>
@@ -153,15 +101,19 @@
 
       <!-- Project view -->
       <section class="project__view__container container">
-        <a href="./appDesign.html" class="project__view__item" target="_blank">
-          <h3 class="project__view__title">APP DESIGN</h3>
+        <a
+          href="./webDesign.html"
+          class="project__view__item appd__view"
+          target="_blank"
+        >
+          <h3 class="project__view__title">WEB DESIGN</h3>
           <p class="project__view__text">VIEW PROJECTS <span>></span></p>
         </a>
 
         <!--  -->
 
-        <a href="./graphicDesign.html" class="project__view__item">
-          <h3 class="project__view__title">GRAPHIC DESIGN</h3>
+        <a href="./appDesign.html" class="project__view__item" target="_blank">
+          <h3 class="project__view__title">APP DESIGN</h3>
           <p class="project__view__text">VIEW PROJECTS <span>></span></p>
         </a>
       </section>
