Refactor code structure for improved readability and maintainability

--- a/extraPages/webDesign.html
+++ b/extraPages/webDesign.html
@@ -160,7 +160,11 @@
 
         <!--  -->
 
-        <a href="./graphicDesign.html" class="project__view__item">
+        <a
+          href="./graphicDesign.html"
+          class="project__view__item"
+          target="_blank"
+        >
           <h3 class="project__view__title">GRAPHIC DESIGN</h3>
           <p class="project__view__text">VIEW PROJECTS <span>></span></p>
         </a>
