--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         />
         <ul class="header__list">
           <li class="header__item">
-            <a href="#" class="header__link">OUR COMPANY</a>
+            <a
+              href="./extraPages/about.html"
+              class="header__link"
+              target="_blank"
+              >OUR COMPANY</a
+            >
           </li>
           <li class="header__item">
             <a href="#" class="header__link">LOCATIONS</a>
@@ -81,7 +86,11 @@
             <p class="projects__text">VIEW PROJECTS <span>></span></p>
           </a>
           <!-- Graphic design-->
-          <a class="projects__link" href="#">
+          <a
+            class="projects__link"
+            href="./extraPages/graphicDesign.html"
+            target="_blank"
+          >
             <h2 class="projects__title">GRAPHIC DESIGN</h2>
             <p class="projects__text">VIEW PROJECTS <span>></span></p>
           </a>
