--- a/extraPages/about.html
+++ b/extraPages/about.html
@@ -35,19 +35,21 @@
     </header>
     <!-- The end of the header -->
     <!-- Main -->
-    <main class="main">
-      <section class="about__hero container">
-        <div class="about__hero__content">
-          <h1 class="about__hero__title">About Us</h1>
-          <p class="about__hero__text">
-            Founded in 2010, we are a creative agency that produces lasting
-            results for our clients. We've partnered with many startups,
-            corporations, and nonprofits alike to craft designs that make real
-            impact. We're always looking forward to creating brands, products,
-            and digital experiences that connect with our clients’ audiences.
-          </p>
+    <main class="">
+      <section class="about container">
+        <div class="about__container">
+          <div class="about__content">
+            <h1 class="about__title">About Us</h1>
+            <p class="about__text">
+              Founded in 2010, we are a creative agency that produces lasting
+              results for our clients. We've partnered with many startups,
+              corporations, and nonprofits alike to craft designs that make real
+              impact. We're always looking forward to creating brands, products,
+              and digital experiences that connect with our clients' audiences.
+            </p>
+          </div>
+          <div class="about__back__img"></div>
         </div>
-        <div class="about__hero__bg"></div>
       </section>
     </main>
   </body>
