--- a/extraPages/about.html
+++ b/extraPages/about.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="../css/about.css" />
     <!-- global styles -->
     <link rel="stylesheet" href="../css/style.css" />
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
   </head>
   <body>
     <!-- Header -->
@@ -36,6 +41,7 @@
     <!-- The end of the header -->
     <!-- Main -->
     <main class="">
+      <!-- About section -->
       <section class="about container">
         <div class="about__container">
           <div class="about__content">
@@ -44,11 +50,37 @@
               Founded in 2010, we are a creative agency that produces lasting
               results for our clients. We've partnered with many startups,
               corporations, and nonprofits alike to craft designs that make real
-              impact. We're always looking forward to creating brands, products,
-              and digital experiences that connect with our clients' audiences.
+              impact.
+              <span>
+                We're always looking forward to creating brands, products, and
+                digital experiences that connect with our clients'
+                audiences.</span
+              >
             </p>
           </div>
           <div class="about__back__img"></div>
+        </div>
+      </section>
+      <!-- Talent section -->
+      <section class="talent container">
+        <div class="talent__container">
+          <div class="talent__bgImg"></div>
+          <div class="talent__content">
+            <h2 class="talent__title">World-class talent</h2>
+            <p class="talent__text">
+              We are a crew of strategists, problem-solvers, and technologists.
+              Every design is thoughtfully crafted from concept to launch,
+              ensuring success in its given market. We are constantly updating
+              our skills in a myriad of platforms.
+            </p>
+            <p class="talent__secondText">
+              Our team is multi-disciplinary and we are not merely interested in
+              form — content and meaning are just as important. We give great
+              importance to craftsmanship, service, and prompt delivery. Clients
+              have always been impressed with our high-quality outcomes that
+              encapsulates their brand’s story and mission.
+            </p>
+          </div>
         </div>
       </section>
     </main>
