Refactor code structure for improved readability and maintainability

--- a/extraPages/about.html
+++ b/extraPages/about.html
@@ -61,6 +61,7 @@
           <div class="about__back__img"></div>
         </div>
       </section>
+
       <!-- Talent section -->
       <section class="talent container">
         <div class="talent__container">
@@ -80,6 +81,33 @@
               have always been impressed with our high-quality outcomes that
               encapsulates their brand’s story and mission.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Location section -->
+      <section class="location">
+        <div class="location__container container">
+          <!-- first -->
+          <div class="location__box">
+            <img src="../images/Canada.png" alt="image of canada" />
+            <h4 class="location__title">CANADA</h4>
+            <button class="location__btn">SEE LOCATION</button>
+          </div>
+          <!-- second -->
+          <div class="location__box">
+            <img src="../images/australia.png" alt="image of australia" />
+            <h4 class="location__title">AUSTRALIA</h4>
+            <button class="location__btn">SEE LOCATION</button>
+          </div>
+          <!-- third -->
+          <div class="location__box">
+            <img
+              src="../images/united__kingdom.png"
+              alt="image of united__kingdom"
+            />
+            <h4 class="location__title">UNITED KINGDOM</h4>
+            <button class="location__btn">SEE LOCATION</button>
           </div>
         </div>
       </section>
