--- a/extraPages/about.html
+++ b/extraPages/about.html
@@ -111,6 +111,28 @@
           </div>
         </div>
       </section>
+
+      <!-- Deal section -->
+      <section class="deal container">
+        <div class="deal__container">
+          <div class="deal__content">
+            <h3 class="deal__title">The real deal</h3>
+            <p class="deal__text">
+              As strategic partners in our clients' businesses, we are ready to
+              take on any challenge as our own. Solving real problems require
+              empathy and collaboration, and we strive to bring a fresh
+              perspective to every opportunity. We make design and technology
+              more accessible and give you tools to measure success.
+            </p>
+            <p class="deal__secondText">
+              We are visual storytellers in appealing and captivating ways. By
+              combining business and marketing strategies, we inspire audiences
+              to take action and drive real results.
+            </p>
+          </div>
+          <div class="deal__backImg"></div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
