Add contact section with form and styling

--- a/extraPages/contact.html
+++ b/extraPages/contact.html
@@ -39,13 +39,74 @@
       </div>
     </header>
     <!-- The end of the header -->
-     <!-- Main -->
-      <main class="main">
-     <section class="contact">
-        <div class="contact__container container">
-            
+    <!-- Main -->
+    <main class="main">
+      <section class="contact container">
+        <div class="contact__container">
+          <div class="contact__content">
+            <h1 class="contact__title">Contact Us</h1>
+            <p class="contact__text">
+              Ready to take it to the next level? Let's talk about your project
+              or idea and find out how we can help your business grow. If you
+              are looking for unique digital experiences that's relatable to
+              your users, drop us a line.
+            </p>
+          </div>
+          <div class="contact__secondContent">
+            <form action="" class="contact__form">
+              <input
+                class="contact__form__input"
+                type="text"
+                placeholder="Name"
+              />
+              <input
+                class="contact__form__input"
+                type="email"
+                placeholder="Email Address"
+              />
+              <input
+                class="contact__form__input"
+                type="phone"
+                placeholder="Phone"
+              />
+              <textarea
+                name=""
+                id=""
+                class="contact__form__textarea"
+                placeholder="Your Message"
+              ></textarea>
+              <button class="btn contact__btn">SUBMIT</button>
+            </form>
+          </div>
         </div>
-     </section>
-      </main>
+      </section>
+
+      <!-- Location section -->
+      <section class="location">
+        <div class="location__container container">
+          <!-- first -->
+          <div class="location__box">
+            <img src="../images/Canada.png" alt="image of canada" />
+            <h4 class="location__title">CANADA</h4>
+            <button class="location__btn">SEE LOCATION</button>
+          </div>
+          <!-- second -->
+          <div class="location__box">
+            <img src="../images/australia.png" alt="image of australia" />
+            <h4 class="location__title">AUSTRALIA</h4>
+            <button class="location__btn">SEE LOCATION</button>
+          </div>
+          <!-- third -->
+          <div class="location__box">
+            <img
+              src="../images/united__kingdom.png"
+              alt="image of united__kingdom"
+            />
+            <h4 class="location__title">UNITED KINGDOM</h4>
+            <button class="location__btn">SEE LOCATION</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
